# nupu_refsi

./: .gitignore  .gitmodules  CMakePresets.json  README.md
.github/workflows/: build.yml
compiler_refsi/: CMakeLists.txt
compiler_refsi/include/refsi_m1/: info.h  nupu_dummy_pass.h  refsi_cl_builtin_info.h  target.h
compiler_refsi/source/: huca_dummy_pass.cpp  module.cpp  nupu_dummy_pass.cpp  refsi_cl_builtin_info.cpp  refsi_pass_machinery.cpp  refsi_pass_registry.def  target.cpp
compiler_refsi/test/passes/: ext_riscv_nuway_riscv_nu_nop.cl  ext_riscv_nuway_riscv_nu_nop.ll  refsi_define_mux_dma_pass_read_2d.ll
driver/: CMakeLists.txt
driver/include/common/: common_devices.h
driver/include/refsidrv/: refsi_device.h  refsi_device_m.h  refsi_memory.h  refsidrv.h
driver/refsidrv/source/: CMakeLists.txt
driver/refsidrv/source/refsidrv/: refsidrv.cpp
driver/source/common/: common_devices.cpp
driver/source/refsidrv/: refsi_accelerator.cpp  refsi_device.cpp  refsi_device_m.cpp  refsi_memory.cpp  refsidrv.cpp
examples/: CMakeLists.txt  cl_huca_nop.c  cl_huca_usm_device.cpp  cl_huca_usm_host.cpp  cl_huca_usm_memcpy.cpp  cl_huca_vector_add_2d.c  cl_nupu_absf.cpp  cl_nupu_control_flow.c  cl_nupu_multi_devices.c  cl_nupu_reduce.cpp  cl_nupu_usm_device.cpp  cl_nupu_usm_memcpy.cpp  cl_nupu_vector_add.c
hal_refsi/: CMakeLists.txt
hal_refsi/examples/: CMakeLists.txt  cl_huca_vector_add.c
hal_refsi/extension/: CMakeLists.txt
hal_refsi/extension/include/extension/: cl_nupu_dummy.h  cl_nuway_dummy.h
hal_refsi/extension/riscv_nuway/: CMakeLists.txt
hal_refsi/extension/riscv_nuway/include/extension/: riscv_nuway.h  riscv_nuway_builtins.h
hal_refsi/extension/riscv_nuway/source/: riscv_nuway.cpp
hal_refsi/extension/source/: cl_nupu_dummy.cpp  cl_nuway_dummy.cpp
hal_refsi/source/: CMakeLists.txt  hal_main.cpp  refsi_hal.cpp  refsi_hal_m1.cpp
huca_refsi/include/refsi_m1/: huca_dummy_pass.h
huca_refsi/source/: refsi_pass_machinery.cpp
refsi_m1/include/refsi_m1/: refsi_mux_builtin_info.h
refsi_m1/test/passes/: refsi_define_mux_dma_pass_write_1d.ll
